--- a/IAmGodHere.css
+++ b/IAmGodHere.css
@@ -9,21 +9,8 @@ body {
     z-index: 0;
 }
 
-body::before {
-    content: "";
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExanY4amd1aG5yZXRhdGxodDY3Z2x5cTZocHR6Mnc1dzlncml6azdjYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/1xmm0jsVFYxdDYRzCB/giphy.webp') no-repeat center center;
-    background-size: cover;
-    pointer-events: none;
-    z-index: -1;
-    opacity: 0.5;
-}
 .banner:not(.review-card > .banner) {
-    height: 400px !important;
+    height: 400px;
     transition: height 1s ease-in-out;
 }
 .text[data-v-04d66030] {
@@ -414,10 +401,6 @@ h2 {
 
 .banner-content[data-v-1cc2919e]:hover {
     height: 320px;
-}
-.banner:not(.review-card > .banner) {
-    height: 350px !important;
-    transition: height 1.5s ease-in-out;
 }
 .banner-content[data-v-1cc2919e] > * {
     transition: opacity 0.5s ease, transform 0.5s ease; 
@@ -965,10 +948,18 @@ a[href="/user/Pawec/"].avatar:hover::before {
         grid-column-gap: 300px;
         transition: height 1s ease-in-out;
     }
+    .banner:not(.review-card > .banner) {
+    height: 350px !important;
+    transition: height 1.5s ease-in-out;
+    }
 }
 @media screen and (max-width: 1650px) and (min-width: 1540px){
     .section{
     max-width: 600px;
+   }
+    .banner:not(.review-card > .banner) {
+    height: 350px !important;
+    transition: height 1.5s ease-in-out;
    }
 }
 @media screen and (max-width: 1540px) and (min-width: 768px) {
